<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.neptunedreams</groupId>
	<artifactId>tango</artifactId>
	<version>2.0.29-SNAPSHOT</version>
	<name>Tango</name>
	<packaging>jar</packaging>
	
	<url>http://maven.apache.org</url>
	<developers>
		<developer>
			<id>SwingGuy1024</id>
			<name>Miguel Muñoz</name>
			<email>SwingGuy1024@yahoo.com</email>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- These properties will be set by the Maven Dependency plugin -->
		<!--suppress UnresolvedMavenProperty -->
<!--		<annotatedJdk>${org.checkerframework:jdk8:jar}</annotatedJdk>-->
		<!--suppress UnresolvedMavenProperty -->
<!--		<errorProneJavac>${com.google.errorprone:javac:jar}</errorProneJavac>-->
	</properties>

	<dependencies>

		<!-- Annotations from the Checker Framework: nullness, interning, locking, ... -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>23.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-library</artifactId>
			<version>1.1</version>
			<scope>test</scope>
		</dependency>
		<!-- Annotations from the Checker Framework: nullness, interning, locking, ... -->
		<dependency>
			<groupId>org.checkerframework</groupId>
			<artifactId>checker-qual</artifactId>
			<version>3.39.0</version>
		</dependency>
		<!-- If using JDK 8, add the following additional dependencies -->


		<!--Google guava-->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>32.1.3-jre</version>
		</dependency>

		<!--Dark Look and Feel-->
		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>flatlaf</artifactId>
			<version>3.2.2</version>
		</dependency>

	</dependencies>


	<build>
		<plugins>
			<!--This is the standard Maven plugin-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<fork>true</fork>
					<source>17</source>
					<target>17</target>
					<compilerArgs>
						<arg>-Xmaxerrs 10000</arg>
						<arg>-Xmaxwarns 10000</arg>
						<!--<AsuppressWarnings>uninitialized</AsuppressWarnings>-->
					</compilerArgs>
					<annotationProcessorPaths>
						<path>
							<groupId>org.checkerframework</groupId>
							<artifactId>checker</artifactId>
							<version>3.39.0</version>
						</path>
					</annotationProcessorPaths>
					<annotationProcessors>
						<!-- Add all the checkers you want to enable here -->

						<!-- Invoke the NullnessChecker at org.checkerframework.checker.nullness.NullnessChecker -->
						<!-- There are probably other checkers we should invoke. -->
						<annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
					</annotationProcessors>
					<showWarnings>true</showWarnings>
					<compilerArgs>
						<!-- If using JDK 8, use only the two arguments immediately below. -->
<!--						<arg>-J-Xbootclasspath/p:${errorProneJavac}</arg>-->
<!--						<arg>-Xbootclasspath/p:${annotatedJdk}</arg>-->
						<!-- If using JDK 11, remove the two arguments above, remove the
								 space in the one below, and uncomment it. -->
						<!-- <arg>-J- -add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg> -->

						<!-- Optionally, -Awarns turns type-checking errors into warnings. -->
<!--						<arg>-Awarns</arg>-->
						<arg>-Astubs=nullness-stub/</arg>
<!--						<arg>-Astubs=checkerframework/stubs</arg> &lt;!&ndash; Suggested by https://github.com/typetools/checker-framework/issues/445 &ndash;&gt;-->
						<arg>-AstubWarnIfNotFound</arg>
							<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
							<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
							<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
							<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
							<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
							<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
							<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
							<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
				<version>3.8.1</version>
			</plugin>

			<!-- This shows as an error in IntelliJ. When I remove the plugin, the project doesn't build. I don't -->
			<!-- understand, but I'm keeping this in place for now. I may need to update to the latest instructions -->
			<!-- for how to use the checker framework with Maven: https://checkerframework.org/manual/#maven -->
			<plugin>
				<!--This is the Maven dependency plugin.-->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>properties</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- From https://maven.apache.org/plugins/maven-source-plugin/usage.html -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Before I include this, I need to generate the JavaDocs. -->
<!--			<plugin>-->
<!--				<groupId>org.apache.maven.plugins</groupId>-->
<!--				<artifactId>maven-javadoc-plugin</artifactId>-->
<!--				<executions>-->
<!--					<execution>-->
<!--						<id>attach-javadocs</id>-->
<!--						<goals>-->
<!--							<goal>jar</goal>-->
<!--						</goals>-->
<!--					</execution>-->
<!--				</executions>-->
<!--			</plugin>-->

			<!-- Allows user to launch from maven: mvn exec:java -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.4.0</version>
				<configuration>
					<mainClass>com.neptunedreams.util.SwipeViewTest</mainClass>
					<cleanupDaemonThreads>false</cleanupDaemonThreads>
				</configuration>
			</plugin>

		</plugins>
		
	</build>


</project>
